plugins {
    id 'java'
    id 'application'
}

group 'dog'
version '0.1-SNAPSHOT'

compileJava {
    sourceCompatibility "1.8"
    targetCompatibility "1.8"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.github.sarxos:webcam-capture:0.3.12'
    implementation 'org.slf4j:slf4j-api:1.7.30'
    implementation 'org.slf4j:slf4j-simple:1.7.30'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

application {
    mainClass = 'dog.giraffe.WebcamFrame'
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '-Xlint:all'
    options.compilerArgs << '-Xdiags:verbose'
    options.compilerArgs << '-g'
    options.compilerArgs << '-parameters'
    options.deprecation = true
}

task copyDependencies(type: Copy) {
    from configurations.default
    into 'build/libs'
}

test {
    useJUnitPlatform()
}